--- a/javascripts/discourse/templates/connectors/discovery-below/sidebar.hbs
+++ b/javascripts/discourse/templates/connectors/discovery-below/sidebar.hbs
@@ -14,9 +14,11 @@
               <a href="/u/{{user}}/activity/likes-given">
                 <UserStat @value={{userLikesGiven}} @icon="heart" @label="user.summary.likes_given" />
               </a>
-              <a href="/u/{{user}}/activity/solved">
-                <UserStat @value={{userSolvedCount}} @icon="check-square" @label="solved.solution_summary.other" />
-              </a>
+              {{#if (theme-setting 'fkb_panel_show_solutions')}}
+                <a href="/u/{{user}}/activity/solved">
+                  <UserStat @value={{userSolvedCount}} @icon="check-square" @label="solved.solution_summary.other" />
+                </a>
+              {{/if}}
               <a href="/u/{{user}}/activity/topics">
                 <UserStat @value={{userTopicCount}} @label="user.summary.topic_count" />
               </a>
@@ -24,6 +26,7 @@
                 <UserStat @value={{userPostCount}} @label="user.summary.post_count" />
               </a>
             </div>
+            {{#if (theme-setting 'fkb_panel_show_badges')}}
             {{#if stinkinBadges}}
               <div class="badges">
                 {{#each stinkinBadges as |b|}}
@@ -44,6 +47,7 @@
                   </span>
                 </a>
               </div>
+            {{/if}}
             {{/if}}
           </div>
         </div>
