FIX: Top banner, like Versatile Banner has
specific width to main-outlet which pushes main-outlet to left. We need to fix the width to 100%.

--- a/common/common.scss
+++ b/common/common.scss
@@ -532,6 +532,13 @@ body {
   background: var(--fkb-bg);
 }
 
+#main > div {
+  #main-outlet {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+
 img.avatar,
 .card-avatar-placeholder,
 .placeholder-avatar {
