UX: Use the correct background color variable
on polls

--- a/scss/var-mixin.scss
+++ b/scss/var-mixin.scss
@@ -74,7 +74,7 @@ $wrap-padding: 0 10px;
 @mixin fkb-poll {
   display: flex;
   flex-flow: column;
-  background: var(--hljs-bg);
+  background: var(--fkb-bg);
   border-radius: $br-em;
 }
 
