UX: Make some margin to top of who-liked and
who-read section.

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -280,6 +280,11 @@ body.search-page {
   }
 }
 
+.who-liked,
+.who-read {
+  margin-top: 10px;
+}
+
 // Private Messages
 
 .archetype-private_message {
