--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -123,158 +123,187 @@ body.invite-page {
 
 // Right Sidebar
 
-.dbook-sidebar {
+.sidebar {
   display: none;
-  margin-bottom: 0.5em;
-  color: var(--primary-high);
-  .fkb-panel-top {
-    border-radius: $br-em $br-em 0 0;
-    background: var(--secondary);
-    background-size: cover;
-    background-position: center;
-    margin: 0 auto;
-  }
-  .fkb-panel-contents {
-    border-radius: $br-em $br-em 0 0;
-    background: rgba(var(--secondary-rgb), 0.85);
-  }
-  .fkb-panel-contents-top {
-    display: flex;
-    flex: 1 1 100%;
-    align-items: center;
-    flex-flow: row;
-    padding: 0.5em 0.5em 0;
-    .fkb-avatar {
-      margin: 0.5em;
-      div {
+  top: 6.5em;
+  position: sticky;
+  max-height: calc(100vh - 6em);
+  max-width: 100%;
+  @include bg-br-auto;
+  .dbook-sidebar {
+    display: none;
+    margin-bottom: 0.5em;
+    color: var(--primary-high);
+    .visitor {
+      display: none;
+    }
+    .anon & {
+      padding: 1em;
+      .visitor {
+        display: block;
+        h2 {
+          margin-left: 0;
+        }
+        img {
+          max-width: 100%;
+          height: auto;
+          border-radius: $br-em;
+        }
+        button {
+          display: block;
+          margin-top: 1em;
+        }
+      }
+    }
+    .fkb-panel-top {
+      border-radius: $br-em $br-em 0 0;
+      background: var(--secondary);
+      background-size: cover;
+      background-position: center;
+      margin: 0 auto;
+    }
+    .fkb-panel-contents {
+      border-radius: $br-em $br-em 0 0;
+      background: rgba(var(--secondary-rgb), 0.85);
+    }
+    .fkb-panel-contents-top {
+      display: flex;
+      flex: 1 1 100%;
+      align-items: center;
+      flex-flow: row;
+      padding: 0.5em 0.5em 0;
+      .fkb-avatar {
+        margin: 0.5em;
+        div {
+          display: flex;
+          align-items: center;
+        }
+        .fkb-user-names {
+          display: flex;
+          flex-flow: column;
+          padding-left: 0.5em;
+          max-width: 180px;
+          .fkb-name {
+            font-size: var(--font-up-1);
+            font-weight: bold;
+            color: var(--primary-high);
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+          }
+          .fkb-username {
+            font-size: var(--font-0);
+            font-weight: normal;
+            color: var(--primary-high);
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            &:before {
+              content: '@';
+            }
+          }
+          span:empty+span:not(:empty) {
+            font-size: var(--font-up-1);
+            font-weight: bold;
+            color: var(--primary-high);
+          }
+        }
+      }
+    }
+    .fkb-panel-contents-stats {
+      display: flex;
+      flex-flow: column;
+      padding: 0 0.5em 0.5em;
+      .stats {
+        a {
+          display: inline-block;
+        }
+        .user-stat {
+          display: inline-block;
+          margin: 0.25em;
+          .value {
+            color: var(--primary);
+            font-weight: 600;
+            vertical-align: middle;
+          }
+          .label {
+            color: var(--primary-high);
+            vertical-align: middle;
+            svg {
+              font-size: 0.9em;
+            }
+            .d-icon-heart {
+              color: var(--love);
+            }
+            .d-icon-clock {
+              color: var(--primary);
+            }
+            .d-icon-bookmark {
+              color: var(--primary);
+            }
+            .d-icon-check-square {
+              color: var(--success);
+            } 
+          }
+        }
+      }
+      .badges {
         display: flex;
         align-items: center;
-      }
-      .fkb-user-names {
-        display: flex;
-        flex-flow: column;
-        padding-left: 0.5em;
-        max-width: 180px;
-        .fkb-name {
-          font-size: var(--font-up-1);
-          font-weight: bold;
-          color: var(--primary-high);
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
+        flex-flow: row wrap;
+        gap: 0.25em;
+        .user-badge {
+          border-radius: $br-em;
         }
-        .fkb-username {
-          font-size: var(--font-0);
-          font-weight: normal;
-          color: var(--primary-high);
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          &:before {
-            content: '@';
+        .badge-type-1 {
+          .d-icon {
+            color: var(--gold);
           }
         }
-        span:empty+span:not(:empty) {
-          font-size: var(--font-up-1);
-          font-weight: bold;
-          color: var(--primary-high);
+        .badge-type-2 {
+          .d-icon {
+            color: var(--silver);
+          }
+        }
+        .badge-type-3 {
+          .d-icon {
+            color: var(--bronze);
+          }
         }
       }
     }
-  }
-  .fkb-panel-contents-stats {
-    display: flex;
-    flex-flow: column;
-    padding: 0 0.5em 0.5em;
-    .stats {
-      a {
-        display: inline-block;
-      }
-      .user-stat {
-        display: inline-block;
-        margin: 0.25em;
-        .value {
-          color: var(--primary);
-          font-weight: 600;
-          vertical-align: middle;
-        }
-        .label {
-          color: var(--primary-high);
-          vertical-align: middle;
-          svg {
-            font-size: 0.9em;
-          }
-          .d-icon-heart {
-            color: var(--love);
-          }
-          .d-icon-clock {
-            color: var(--primary);
-          }
-          .d-icon-bookmark {
-            color: var(--primary);
-          }
-          .d-icon-check-square {
-            color: var(--success);
-          } 
+    .fkb-panel-contents-bottom {
+      display: flex;
+      grid-auto-flow: column;
+      position: relative;
+      padding: 0.5em;
+      gap: 0.5em;
+      .fkb-link {
+        color: var(--primary-high);
+        &:hover,
+        &:focus {
+          color: var(--secondary);
         }
       }
     }
-    .badges {
+    h2 {
+      font-size: var(--font-up-2);
+      font-weight: 600;
+      margin-bottom: 10px;
+      margin-left: 0.5em;
+      line-height: var(--line-height-medium);
+    }
+    h3 {
+      font-size: var(--font-0);
+    }
+    .reads {
       display: flex;
       align-items: center;
-      flex-flow: row wrap;
-      gap: 0.25em;
-      .user-badge {
-        border-radius: $br-em;
+      margin-bottom: 0.25em;
+      .d-icon {
+        margin-right: 0.25em;
+        font-size: 0.9em;
       }
-      .badge-type-1 {
-        .d-icon {
-          color: var(--gold);
-        }
-      }
-      .badge-type-2 {
-        .d-icon {
-          color: var(--silver);
-        }
-      }
-      .badge-type-3 {
-        .d-icon {
-          color: var(--bronze);
-        }
-      }
-    }
-  }
-  .fkb-panel-contents-bottom {
-    display: flex;
-    grid-auto-flow: column;
-    position: relative;
-    padding: 0.5em;
-    gap: 0.5em;
-    .fkb-link {
-      color: var(--primary-high);
-      &:hover,
-      &:focus {
-        color: var(--secondary);
-      }
-    }
-  }
-  h2 {
-    font-size: var(--font-up-2);
-    font-weight: 600;
-    margin-bottom: 10px;
-    margin-left: 0.5em;
-    line-height: var(--line-height-medium);
-  }
-  h3 {
-    font-size: var(--font-0);
-  }
-  .reads {
-    display: flex;
-    align-items: center;
-    margin-bottom: 0.25em;
-    .d-icon {
-      margin-right: 0.25em;
-      font-size: 0.9em;
     }
   }
 }
