--- a/common/common.scss
+++ b/common/common.scss
@@ -613,9 +613,13 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
     }
   }
   .list-container {
-    // min-width: 70%; // Don't let the topic list get too narrow
     display: flex;
     flex: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
+    min-width: 0;    
     @media (max-width: 800px) {
       flex-basis: 100%;
     }
@@ -626,10 +630,6 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
         width: 100%;
       }
     }
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    min-width: 0;
     + span {
       .desktop-view & {
         margin-left: auto;
