Update and rename sidebar.hbs to fkb-panel-sidebar.hbs

--- a/javascripts/discourse/templates/connectors/discovery-below/fkb-panel-sidebar.hbs
+++ b/javascripts/discourse/templates/connectors/discovery-below/fkb-panel-sidebar.hbs
@@ -1,5 +1,5 @@
 {{#unless site.mobileView}}
-  <div class="dbook-sidebar">
+  <div class="fkb-panel">
     {{#if user}}
       <div class="fkb-panel-top" style="background-image: url('{{userCardBg}}');">
         <div class="fkb-panel-contents">
