--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -383,6 +383,76 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
   }
 }
 
+// Sticky New Topic Banner
+
+#list-area {
+  .show-more {
+    @include sticky-new-topic;
+    z-index: 1;
+    @media screen and (max-width: 1180px) {
+      margin: 0 auto -22px;
+      animation: none;
+    }
+    .alert.alert-info.clickable {
+      padding: 13px 16px;
+      margin-bottom: 0;
+      background: var(--tertiary);
+      color: var(--secondary);
+      border-radius: var(--d-button-border-radius);
+      box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.25);
+      transition: background 0.25s ease;
+      &:hover,
+      &:focus {
+        background: var(--tertiary-hover);
+      }
+      span {
+        margin: auto;
+        line-height: 1.199;
+      }
+    }
+  }
+  .top-lists {
+    margin: 1em;
+    h2 {
+      margin: 8px 0;
+    }
+  }
+}
+
+.list-controls {
+  scroll-margin-top: calc(var(--header-offset) * 2);
+}
+
+// User message Sticky New Message Banner
+
+.user-messages-page {
+  .show-mores {
+    @include sticky-new-topic;
+    z-index: 1;
+    .alert.alert-info.clickable {
+      padding: 13px 16px;
+      margin-bottom: 0;
+      background: var(--tertiary);
+      color: var(--secondary);
+      border-radius: var(--d-button-border-radius);
+      box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.25);
+      transition: background 0.25s ease;
+      &:hover,
+      &:focus {
+        background: var(--tertiary-hover);
+      }
+      span {
+        margin: auto;
+        line-height: 1.199;
+      }
+    }
+  }
+}
+
+.user-primary-navigation {
+  scroll-margin-top: calc(var(--header-offset) * 2);
+}
+
 // Menu panel
 
 .menu-panel {
