--- a/scss/var-mixin.scss
+++ b/scss/var-mixin.scss
@@ -88,3 +88,50 @@
   width: max-content;
   margin: -22px auto -22px;
 }
+
+// Alert info clickable
+
+@mixin alert-info-clickable-desktop {
+  padding: 13px 16px;
+  margin-bottom: 0;
+  background: var(--tertiary);
+  color: var(--secondary);
+  border-radius: var(--d-button-border-radius);
+  box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.25);
+  transition: background 0.25s ease;
+  &:hover,
+  &:focus {
+    background: var(--tertiary-hover);
+  }
+  span {
+    margin: auto;
+    line-height: 1.199;
+  }
+}
+
+@mixin alert-info-clickable-mobile {
+  padding: 0.75em 1em;
+  background: var(--tertiary);
+  color: var(--secondary);
+  border-radius: var(--d-button-border-radius);
+  box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.25);
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+  &:active {
+    background: var(--tertiary-hover);
+    box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.25);
+    transform: scale(0.95);
+    &:focus {
+      @include default-focus;
+      border-color: var(--tertiary-hover);
+      outline-color: var(--tertiary-hover);
+    }
+  }
+  &:focus {
+    @include default-focus;
+    border-color: var(--tertiary);
+    outline-color: var(--tertiary);
+  }
+  span {
+    margin: auto;
+  }
+}
