--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -327,30 +327,7 @@ body.nav-controls-hidden {
   .alert.alert-info.clickable {
     @include sticky-new-topic;
     z-index: 8;
-    padding: 0.75em 1em;
-    background: var(--tertiary);
-    color: var(--secondary);
-    border-radius: var(--d-button-border-radius);
-    box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.25);
-    transition: transform 0.25s ease, box-shadow 0.25s ease;
-    &:active {
-      background: var(--tertiary-hover);
-      box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.25);
-      transform: scale(0.95);
-      &:focus {
-        @include default-focus;
-        border-color: var(--tertiary-hover);
-        outline-color: var(--tertiary-hover);
-      }
-    }
-    &:focus {
-      @include default-focus;
-      border-color: var(--tertiary);
-      outline-color: var(--tertiary);
-    }
-    span {
-      margin: auto;
-    }
+    @include alert-info-clickable-mobile;
   }
   
   // Tag page
@@ -359,30 +336,7 @@ body.nav-controls-hidden {
     @include sticky-new-topic;
     z-index: 8;
     .alert.alert-info.clickable {
-      padding: 0.75em 1em;
-      background: var(--tertiary);
-      color: var(--secondary);
-      border-radius: var(--d-button-border-radius);
-      box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.25);
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
-      &:active {
-        background: var(--tertiary-hover);
-        box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.25);
-        transform: scale(0.95);
-        &:focus {
-          @include default-focus;
-          border-color: var(--tertiary-hover);
-          outline-color: var(--tertiary-hover);
-        }
-      }
-      &:focus {
-        @include default-focus;
-        border-color: var(--tertiary);
-        outline-color: var(--tertiary);
-      }
-      span {
-        margin: auto;
-      }
+      @include alert-info-clickable-mobile;
     }
   }
   
@@ -394,10 +348,6 @@ body.nav-controls-hidden {
   }
 }
 
-.list-controls {
-  scroll-margin-top: calc(var(--header-offset) * 2);
-}
-
 // User message Sticky New Message Banner
 
 .user-messages-page {
@@ -405,34 +355,12 @@ body.nav-controls-hidden {
     @include sticky-new-topic;
     z-index: 8;
     .alert.alert-info.clickable {
-      padding: 0.75em 1em;
-      background: var(--tertiary);
-      color: var(--secondary);
-      border-radius: var(--d-button-border-radius);
-      box-shadow: 0px 5px 5px -1px rgba(0, 0, 0, 0.25);
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
-      &:active {
-        background: var(--tertiary-hover);
-        box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.25);
-        transform: scale(0.95);
-        &:focus {
-          @include default-focus;
-          border-color: var(--tertiary-hover);
-          outline-color: var(--tertiary-hover);
-        }
-      }
-      &:focus {
-        @include default-focus;
-        border-color: var(--tertiary);
-        outline-color: var(--tertiary);
-      }
-      span {
-        margin: auto;
-      }
+      @include alert-info-clickable-mobile;
     }
   }
 }
 
+.list-controls,
 .user-primary-navigation {
   scroll-margin-top: calc(var(--header-offset) * 2);
 }
